--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -18,7 +18,7 @@ form {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  height: 50vh;
 }
 
 /* form {
@@ -86,8 +86,24 @@ button[type="submit"]:hover {
 
 .response {
   padding: 20px;
+  margin-top: 20px;
   margin: 20px;
   border: 1px solid #ccc;
   border-radius: 5px;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
 }
+
+
+
+.input-container button {
+  margin-left: 10px;
+}
+
+.input-container {
+  display: flex;
+  align-items: center;
+}
+
+/* .response {
+  margin-top: 20px;
+} */
